fix frineds page

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -57,7 +57,7 @@ desc = ""
 name = "涩队CSL"
 url = "https://cubercsl.site/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=944293977&s=640"
-desc = ""
+desc = "The end is always near."
 
 [[friend]]
 name = "BruceChen's Blog"
