fix frineds page in other way

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -32,7 +32,7 @@ desc = ""
 [[friend]]
 name = "松鼠妹妹"
 url = "https://sosusosu.icu/"
-avatar = "https://q1.qlogo.cn/g?b=qq&nk=3308395526&s=640"
+avatar = "https://sosusosu.icu/images/avatar.webp"
 desc = ""
 
 [[friend]]
@@ -60,7 +60,7 @@ avatar = "https://q1.qlogo.cn/g?b=qq&nk=944293977&s=640"
 desc = "The end is always near."
 
 [[friend]]
-name = "BruceChen's Blog"
+name = "BruceChen"
 url = "https://brucec.cn/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1136018715&s=640"
 desc = ""
