change BruceChen's avatar and desc

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -62,5 +62,5 @@ desc = "The end is always near."
 [[friend]]
 name = "BruceChen"
 url = "https://brucec.cn/"
-avatar = "https://q1.qlogo.cn/g?b=qq&nk=1136018715&s=640"
-desc = ""
+avatar = "https://static.brucec.cn/image/avatar/my/avatar_1080w.webp"
+desc = "QwQ"
