Change friend name

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -11,7 +11,7 @@ avatar = "https://q1.qlogo.cn/g?b=qq&nk=2291443901&s=640"
 desc = ""
 
 [[friend]]
-name = "嘤傻"
+name = "嘤嘤嘤嘤嘤"
 url = "https://withghost.github.io/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1023461968&s=640"
 desc = ""
