add friend koto-k

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -70,3 +70,9 @@ name = "Hiromi Yuasa"
 url = "http://hiromiyuasa.github.io/"
 avatar = "https://avatars.githubusercontent.com/u/72242390"
 desc = "涩涩！"
+
+[[friend]]
+name = "koto-k"
+url = "https://www.cnblogs.com/koto-k/"
+avatar = "https://q1.qlogo.cn/g?b=qq&nk=2557746160&s=640"
+desc = "Keep your feet on your track.|"
