--- a/config.yml
+++ b/config.yml
@@ -82,18 +82,6 @@ languages:
         # - name: NullLink3
         #   url: "#"
 
-  # fa:
-  #   languagedirection: rtl
-  #   weight: 3
-  #   title: PaperMod RTL
-  #   homeInfoParams:
-  #     Title: "Hi there \U0001F44B"
-  #     Content: Welcome to RTL layout
-  #   menu:
-  #     main:
-  #       - name: Tags
-  #         url: tags
-  #         weight: 10
 
 outputs:
   home:
@@ -150,7 +138,7 @@ params:
     - name: Twitter
       url: "https://twitter.com/ReiAccept"
     - name: Telegram
-      url: "https://t.me/CuteRei"
+      url: "https://t.me/ReiOnTheLoaf"
     - name: Email
       url: "mailto:lhh@live.com"
     - name: Steam
@@ -172,12 +160,12 @@ params:
   #     google:
   #         SiteVerificationTag: "XYZabc"
 
-  # assets:
-  #     favicon: "<link / abs url>"
-  #     favicon16x16: "<link / abs url>"
-  #     favicon32x32: "<link / abs url>"
-  #     apple_touch_icon: "<link / abs url>"
-  #     safari_pinned_tab: "<link / abs url>"
+  assets:
+      favicon: "/noeru_compressd.png"
+      # favicon16x16: "<link / abs url>"
+      # favicon32x32: "<link / abs url>"
+      # apple_touch_icon: "<link / abs url>"
+      # safari_pinned_tab: "<link / abs url>"
 
   # cover:
   #     hidden: true # hide everywhere but not in structured data
