--- a/config.yml
+++ b/config.yml
@@ -165,7 +165,7 @@ params:
       # favicon16x16: "<link / abs url>"
       # favicon32x32: "<link / abs url>"
       apple_touch_icon: "/noeru_compressd.png"
-      safari_pinned_tab: "/noeru_compressd.png"
+      # safari_pinned_tab: "<link / abs url>"
 
   # cover:
   #     hidden: true # hide everywhere but not in structured data
