添加 Mauve 的友链

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -82,3 +82,9 @@ name = "Aclarar"
 url = "https://collapsemos.top/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1957762024&s=640"
 desc = "爱与和平♂"
+
+[[friend]]
+name = "Mauve"
+url = "https://hukeqing.github.io/"
+avatar = "https://hukeqing.github.io/image/about/avatar.png"
+desc = "欢迎，许久不见，甚是想念"
