--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -56,7 +56,7 @@ limit = 10
 type = "toc"
 
 [opengraph.twitter]
-site = ""
+site = "ReiAccept"
 card = "summary_large_image"
 
 [defaultImage.opengraph]
