更新每日一题到Day54

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -43,13 +43,13 @@ desc = ""
 
 [[friend]]
 name = "无限ucw"
-url = "https://ucw.moe"
+url = "https://ucw.moe/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1840214768&s=640"
 desc = ""
 
 [[friend]]
 name = "珺妍"
-url = "https://llh721113.github.io"
+url = "https://llh721113.github.io/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=2652088766&s=640"
 desc = ""
 
