Add Google Analytics

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,3 +15,5 @@ hasCJKLanguage = true
 
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
+
+googleAnalytics = "UA-97060993-1"
