测试随机涩图API

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -2,19 +2,19 @@
 name = "王神仙"
 url = "https://www.cnblogs.com/onglublog/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=632599557&s=640"
-desc = ""
+desc = "无敌WSX"
 
 [[friend]]
 name = "凯爷"
 url = "https://kaizynx.github.io/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=2291443901&s=640"
-desc = ""
+desc = "无敌凯爷的博客"
 
 [[friend]]
 name = "嘤嘤嘤嘤嘤"
 url = "https://withghost.github.io/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1023461968&s=640"
-desc = ""
+desc = "可爱！"
 
 
 [[friend]]
@@ -33,7 +33,7 @@ desc = ""
 name = "松鼠妹妹"
 url = "https://sosusosu.icu/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=3308395526&s=640"
-desc = ""
+desc = "松鼠酱实在是可爱辣"
 
 [[friend]]
 name = "ssr"
