--- a/data/friends.toml
+++ b/data/friends.toml
@@ -67,7 +67,7 @@ desc = "QwQ"
 
 [[friend]]
 name = "Hiromi Yuasa"
-url = "http://hiromiyuasa.github.io/"
+url = "https://hiromi.eu.org/"
 avatar = "https://avatars.githubusercontent.com/u/72242390"
 desc = "涩涩！"
 
