Codeforces Round #789 (Div. 2)

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -30,7 +30,7 @@ avatar = "https://q1.qlogo.cn/g?b=qq&nk=578329240&s=640"
 desc = "强力学长"
 
 [[friend]]
-name = "松鼠姐姐的小站"
+name = "松鼠姐姐"
 url = "https://sosusosu.icu/"
 avatar = "https://raw.githubusercontent.com/sosupro/sosupro.github.io/main/images/avatar.webp"
 desc = "优质坚果提供地"
