--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -20,7 +20,7 @@ subtitle = "卖个萌，摸摸头"
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/avatar.png"
+src = "img/avatar.jpg"
 
 [article]
 math = false
