--- a/data/friends.toml
+++ b/data/friends.toml
@@ -94,3 +94,9 @@ name = "鲍鲍"
 url = "https://zning-b.github.io/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1026106774&s=640"
 desc = "是蓝天天的男朋友哦"
+
+[[friend]]
+name = "Season0518"
+url = "https://season0518.github.io/MyBlog/"
+avatar = "https://q1.qlogo.cn/g?b=qq&nk=1342367762&s=640"
+desc = "清纯学弟"
