add friend Livinfly

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -100,3 +100,9 @@ name = "Season0518"
 url = "https://season0518.github.io/MyBlog/"
 avatar = "https://q1.qlogo.cn/g?b=qq&nk=1342367762&s=640"
 desc = "清纯学弟"
+
+[[friend]]
+name = "残城三梦 / Livinfly"
+url = "https://livinfly.top/"
+avatar = "https://q1.qlogo.cn/g?b=qq&nk=2756436359&s=640"
+desc = "坏了，我成学妹了"
