--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,13 +1,13 @@
 # Change baseurl before deploy
 baseurl = "https://rei.ac"
-languageCode = "zh-cn"
+languageCode = "zh-hans"
 theme = "hugo-theme-stack"
 paginate = 8
 title = "Rei's Blog"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
-DefaultContentLanguage = "zh-cn"
+DefaultContentLanguage = "zh-hans"
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
