--- a/data/friends.toml
+++ b/data/friends.toml
@@ -56,7 +56,7 @@ desc = ""
 [[friend]]
 name = "涩队CSL's blog"
 url = "https://cubercsl.site/"
-avatar = "https://blog.cubercsl.site/avatar-120.png"
+avatar = "https://avatars.githubusercontent.com/u/22931465"
 desc = "The end is always near."
 
 [[friend]]
