--- a/data/friends.toml
+++ b/data/friends.toml
@@ -71,8 +71,8 @@ avatar = "https://q1.qlogo.cn/g?b=qq&nk=1957762024&s=640"
 desc = "爱与和平♂"
 
 [[friend]]
-name = "Mauve"
-url = "https://hukeqing.github.io/"
+name = "刻师傅！"
+url = "https://blog.mauve.icu/"
 avatar = "https://hukeqing.github.io/image/about/avatar.png"
 desc = "欢迎，许久不见，甚是想念"
 
