--- a/data/friends.toml
+++ b/data/friends.toml
@@ -90,8 +90,8 @@ desc = "清纯学弟"
 
 [[friend]]
 name = "残城三梦 / Livinfly"
-url = "https://livinfly.top/"
-avatar = "https://q1.qlogo.cn/g?b=qq&nk=2756436359&s=640"
+url = "https://livinfly.github.io/"
+avatar = "https://avatars.githubusercontent.com/u/65482183"
 desc = "坏了，我成学妹了"
 
 [[friend]]
