--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,4 +6,4 @@ title = "ReiAC's Blog"
 DefaultContentLanguage = "zh-cn"
 hasCJKLanguage = true
 
-googleAnalytics = "UA-97060993-1"
+googleAnalytics = "G-HW8PYHFE31"
