fix friend link

--- a/data/friends.toml
+++ b/data/friends.toml
@@ -102,6 +102,6 @@ desc = "OIer / ACMer / Win32 dev"
 
 [[friend]]
 name = "浅梦"
-url = "https://shallowdream.site"
-avatar = "http://shallowdream.site/img/head.png"
+url = "https://1804040636.github.io/"
+avatar = "https://1804040636.github.io/img/head.png"
 desc = "浅梦の博客"
